--- a/test.ini
+++ b/test.ini
@@ -2,7 +2,7 @@
 base = "rss/"
 
 [source001]
-name = "mckinsey_rss.xml"
+name = "androidpolice.xml"
 url = "https://www.androidpolice.com/feed/"
 max = "10"
 md5 = ""
