--- a/test.ini
+++ b/test.ini
@@ -1,10 +1,18 @@
 [cfg]
 base = "rss/"
 
-[source001]
+[AndroidPolice]
 name = "androidpolice.xml"
 url = "https://www.androidpolice.com/feed/"
 max = "20"
 md5 = "d7b371fb32e6634f74f04c43cdf10ecb"
+action = "auto"
+
+
+[gHacks]
+name = "ghacks.xml"
+url = "https://www.ghacks.net/feed/"
+max = "20"
+md5 = ""
 action = "auto"
 
