--- a/test.ini
+++ b/test.ini
@@ -1,7 +1,7 @@
 [cfg]
 base = "rss/"
 
-[AndroidPolice]
+[source001]
 name = "androidpolice.xml"
 url = "https://www.androidpolice.com/feed/"
 max = "20"
@@ -9,7 +9,7 @@ md5 = "d7b371fb32e6634f74f04c43cdf10ecb"
 action = "auto"
 
 
-[gHacks]
+[source002]
 name = "ghacks.xml"
 url = "https://www.ghacks.net/feed/"
 max = "20"
