--- a/test.ini
+++ b/test.ini
@@ -15,3 +15,9 @@ max = "20"
 md5 = "8204ab208da4b7f15d627a63f961f14a"
 action = "auto"
 
+[lifehacker]
+name = "lifehacker.xml"
+url = "https://lifehacker.com/rss"
+max = "20"
+md5 = ""
+action = "auto"
