--- a/test.ini
+++ b/test.ini
@@ -22,3 +22,9 @@ max = "20"
 md5 = "45c09426ccb3d901038a4c321a84f768"
 action = "auto"
 
+[9to5mac]
+name = "9to5mac.xml"
+url = "https://9to5mac.com/feed/"
+max = "20"
+md5 = ""
+action = "auto"
