--- a/test.ini
+++ b/test.ini
@@ -2,30 +2,8 @@
 base = "rss/"
 
 [source001]
-name = "androidpolice.xml"
-url = "https://www.androidpolice.com/feed/"
-max = "10"
+name = "nanhuazaobao.xml"
+url = "https://rsshub.rssforever.com/scmp/91"
+max = "20"
 md5 = "5127e38bbf7c94d3f9f89e7616bf260c"
 action = "auto"
-
-[source002]
-name = "ghacks.xml"
-url = "https://www.ghacks.net/feed/"
-max = "10"
-md5 = "b4411b409bc8dd801cedde6e16775bd4"
-action = "auto"
-
-[lifehacker]
-name = "lifehacker.xml"
-url = "https://lifehacker.com/rss"
-max = "10"
-md5 = "8c1a6c8021b3d4574f08b0db95adc5f6"
-action = "auto"
-
-[9to5mac]
-name = "9to5mac.xml"
-url = "https://9to5mac.com/feed/"
-max = "10"
-md5 = "e85308dc39d9bb0786776baf1fa499c6"
-action = "auto"
-
