--- a/test.ini
+++ b/test.ini
@@ -3,7 +3,7 @@ base = "rss/"
 
 [source001]
 name = "nanhuazaobao.xml"
-url = "https://rsshub.rssforever.com/scmp/91"
+url = "https://feedx.net/rss/scmp.xml"
 max = "20"
 md5 = "ce836146d5bf2c9febe575e0c7f4f927"
 action = "auto"
