--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,83 @@
+altgraph==0.17.3
+aspeak==3.1.0
+async-generator==1.10
+attrs==22.1.0
+autopep8==2.0.0
+azure-cognitiveservices-speech==1.24.1
 beautifulsoup4==4.11.1
-pygtrans==1.4.0
+Brotli==1.0.9
+bs4==0.0.1
+certifi==2022.9.24
+cffi==1.15.1
+charset-normalizer==2.1.1
+coverage==5.5
+cssselect==1.2.0
+Deprecated==1.2.13
+deprecation==2.1.0
+distlib==0.3.6
+dnspython==2.2.1
+docopt==0.6.2
+docutils==0.19
+eventlet==0.33.1
+exceptiongroup==1.0.1
+eyed3==0.9.7
+fake-useragent==0.1.11
+feedparser==6.0.10
+ffmpeg-python==0.2.0
+filelock==3.12.0
+filetype==1.2.0
+func-timeout==4.3.5
+future==0.18.2
+gevent==22.10.2
+greenlet==2.0.0
+gunicorn==20.1.0
+h11==0.14.0
+idna==3.4
+install==1.3.5
+lockfile==0.12.2
+lxml==4.9.1
+mutagen==1.46.0
+opml==0.5
+outcome==1.2.0
+packaging==21.3
+parsel==1.6.0
+pefile==2022.5.30
+pipenv==2023.4.20
+pipreqs==0.4.11
+platformdirs==3.2.0
+pybeautifier==0.1.3
+pycodestyle==2.9.1
+pycparser==2.21
+pycryptodomex==3.15.0
+pydub==0.25.1
+pygtrans==1.5.2
+pyinstaller==5.6.1
+pyinstaller-hooks-contrib==2022.11
+pyparsing==3.0.9
+PySocks==1.7.1
+python-daemon==2.3.2
+pywin32-ctypes==0.2.0
+requests==2.28.1
+selenium==4.6.0
+sgmllib3k==1.0.0
+six==1.16.0
+sniffio==1.3.0
+sortedcontainers==2.4.0
+soupsieve==2.3.2.post1
+tinytag==1.8.1
+toml==0.10.2
+tomli==2.0.1
+trio==0.22.0
+trio-websocket==0.9.2
+urllib3==1.26.12
+virtualenv==20.22.0
+virtualenv-clone==0.5.7
+w3lib==2.0.1
+websockets==10.2
+wget==3.2
+wrapt==1.14.1
+wsproto==1.2.0
+yarg==0.1.9
+yt-dlp==2022.10.4
+zope.event==4.5.0
+zope.interface==5.5.2
