--- a/test.ini
+++ b/test.ini
@@ -8,3 +8,9 @@ max = "20"
 md5 = "a7568e6599cabcc0f5f22e3cf77b6f32"
 action = "auto"
 
+[source002]
+name = "washingtonpost.xml"
+url = "https://feedx.net/rss/washingtonpost.xml"
+max = "20"
+md5 = "ed4d25ca2847603db809cb6d09d82a6c"
+action = "auto"
