--- a/test.ini
+++ b/test.ini
@@ -15,3 +15,37 @@ max = "20"
 md5 = "7566ad9459f8c7032f2c3a4d8c878319"
 action = "auto"
 
+[source003]
+name = "washingtonpost.xml"
+url = "https://feedx.net/rss/guardian.xml"
+max = "20"
+md5 = "7566ad9459f8c7032f2c3a4d8c878319"
+action = "auto"
+
+[source004]
+name = "washingtonpost.xml"
+url = "https://feedx.net/rss/guardian.xml"
+max = "20"
+md5 = "7566ad9459f8c7032f2c3a4d8c878319"
+action = "auto"
+
+[source005]
+name = "ap.xml"
+url = "https://feedx.net/rss/ap.xml"
+max = "20"
+md5 = "7566ad9459f8c7032f2c3a4d8c878319"
+action = "auto"
+
+[source006]
+name = "economist.xml"
+url = "https://feedx.net/rss/economist.xml"
+max = "20"
+md5 = "7566ad9459f8c7032f2c3a4d8c878319"
+action = "auto"
+
+[source007]
+name = "economist.xml"
+url = "https://feedx.net/rss/economist.xml"
+max = "20"
+md5 = "7566ad9459f8c7032f2c3a4d8c878319"
+action = "auto"
