--- a/test.ini
+++ b/test.ini
@@ -44,8 +44,8 @@ md5 = "7566ad9459f8c7032f2c3a4d8c878319"
 action = "auto"
 
 [source007]
-name = "economist.xml"
-url = "https://feedx.net/rss/economist.xml"
+name = "economistp.xml"
+url = "https://feedx.net/rss/economistp.xml"
 max = "20"
 md5 = "7566ad9459f8c7032f2c3a4d8c878319"
 action = "auto"
