--- a/test.ini
+++ b/test.ini
@@ -16,14 +16,14 @@ md5 = "9ccf1fcee5d2f50c86b331c435b618e2"
 action = "auto"
 
 [source003]
-name = "washingtonpost.xml"
+name = "guardian.xml"
 url = "https://feedx.net/rss/guardian.xml"
 max = "20"
 md5 = "f403b9e871a2e8d69996835a1b536487"
 action = "auto"
 
 [source004]
-name = "washingtonpost.xml"
+name = "guardian.xml"
 url = "https://feedx.net/rss/guardian.xml"
 max = "20"
 md5 = "f403b9e871a2e8d69996835a1b536487"
