--- a/test.ini
+++ b/test.ini
@@ -43,3 +43,10 @@ max = "20"
 md5 = "392c9d977d5fb1086cd2c43b1e3cb966"
 action = "auto"
 
+[source007]
+name = "reutersen.xml"
+url = "https://feedx.net/rss/reutersen.xml"
+max = "20"
+md5 = "392c9d977d5fb1086cd2c43b1e3cb966"
+action = "auto"
+
