--- a/requirements.txt
+++ b/requirements.txt
@@ -34,8 +34,10 @@ gunicorn==20.1.0
 h11==0.14.0
 idna==3.4
 install==1.3.5
+Jinja2==3.1.2
 lockfile==0.12.2
 lxml==4.9.1
+MarkupSafe==2.1.3
 mutagen==1.46.0
 opml==0.5
 outcome==1.2.0
